fix overflowing graph, fix lines, cleanup

--- a/micropsi_server/static/css/micropsi-styles.css
+++ b/micropsi_server/static/css/micropsi-styles.css
@@ -258,7 +258,7 @@ graphs
 
 .line {
   fill: none;
-  stroke-width: 1.5px;
+  stroke-width: 1px;
 }
 
 
